screen flicker and scrollbar issue resolved

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,8 @@
 mat-toolbar {
-  margin: 2px;
+  /* margin-top: 2px; */
   background: #002b5c;
   color: white;
-  height: 50px;
+  /* height: 50px; */
 }
 
 mat-sidenav {
@@ -17,11 +17,11 @@ mat-sidenav {
 }
 
 .content {
-  height: calc(100vh - 98px);
-  border-radius: 10px;
+  height: calc(100vh - 98px); 
+   border-radius: 10px;
   margin: 14px;
   margin-left: 26px;
-  padding: 2px;
+  padding: 2px; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,7 +68,7 @@ mat-divider {
   background-color: rgba(255, 255, 255, 0.5);
 }
 .appDiv {
-  
+  margin-top: 10px;
   margin-left: 25px;
 }
 
